Fixed letter spacing.

--- a/front_end/static/front_end/style.css
+++ b/front_end/static/front_end/style.css
@@ -1,3 +1,6 @@
+img{
+margin-right: 3px}
+
 .upper{
     width: 20px;
     height: 20px
